<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
        <!--需要的viewModel,通过mBinding.vm=mViewMode注入-->
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_change_password"
            layout="@layout/toolbar_while_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhilt"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="请输入新密码"
                android:paddingBottom="@dimen/y32"
                android:paddingLeft="@dimen/x25"
                android:paddingTop="@dimen/y32"
                android:textColor="@color/text_999"
                android:textCursorDrawable="@drawable/bg_cursor"
                android:textSize="@dimen/x30" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/y1"
            android:background="@color/div_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhilt"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="请输入验证码"
                android:paddingBottom="@dimen/y32"
                android:paddingLeft="@dimen/x25"
                android:paddingTop="@dimen/y32"
                android:textColor="@color/text_999"
                android:textCursorDrawable="@drawable/bg_cursor"
                android:textSize="@dimen/x30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/x26"
                android:background="@drawable/bg_btn_mine_verification_code"
                android:paddingBottom="@dimen/y13"
                android:paddingLeft="@dimen/x33"
                android:paddingRight="@dimen/x28"
                android:paddingTop="@dimen/y14"
                android:text="发送验证码"
                android:textColor="@color/text_fe"
                android:textSize="@dimen/x24" />
        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/y88"
            android:layout_marginLeft="@dimen/x25"
            android:layout_marginRight="@dimen/x25"
            android:layout_marginTop="@dimen/y60"
            android:background="@drawable/bg_btn_login"
            android:text="@string/text_item_change_password_sure"
            android:textColor="@color/colorWhilt"
            android:textSize="@dimen/x32" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y16"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/x25">

            <ImageView
                android:layout_width="@dimen/x25"
                android:layout_height="@dimen/x25"
                android:src="@drawable/icon_shop_cat_check_selected" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x16"
                android:text="@string/text_item_change_password_con"
                android:textColor="@color/text_999"
                android:textSize="@dimen/x24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x10"
                android:text="@string/text_item_change_password_deal"
                android:textColor="@color/text_main_default"
                android:textSize="@dimen/x24" />

        </LinearLayout>
    </LinearLayout>
</layout>